# HFTServerInterface

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
certs/: README
include/models/: ReportRequest.hpp  Request.hpp  Response.hpp
include/server/: CommandRegistry.hpp  ICommand.hpp  IServerFacade.hpp  RequestTypes.hpp
include/services/: ICalculationService.hpp  IManipulationService.hpp  IMarketDataService.hpp  IReportService.hpp
include/services/reports/: BaseReport.hpp
include/transport/: ITransport.hpp
scripts/: gen_certs.sh
shared/models/: MarketData.hpp
shared/pod/: TradingPOD.hpp
src/: main.cpp
src/server/: CommandRegistry.cpp  StubServices.hpp  TradingServerFacade.cpp  TradingServerFacade.hpp
src/server/commands/: CalculationCommand.hpp  GetMarketDataCommand.hpp  ManipulationCommand.hpp  ReportCommand.hpp
src/services/reports/: BaseReport.cpp  EndOfDayReport.cpp  EndOfDayReport.hpp
src/transport/: BoostAsioSslTransport.cpp  BoostAsioSslTransport.hpp
tests/bdd/features/: calculation.feature  end_of_day_report.feature  manipulation.feature  market_data.feature
tests/bdd/steps/: market_data_steps.cpp  report_steps.cpp
tests/unit/: CMakeLists.txt  test_CalculationService.cpp  test_CommandRegistry.cpp  test_EndOfDayReport.cpp  test_ManipulationService.cpp  test_MarketDataService.cpp  test_ServerBootstrap.cpp  test_TradingServerFacade.cpp
